Use `Path.of()` factory method.